vpc.tf
resource "aws_vpc" "default" {
  assign_generated_ipv6_cidr_block = "false"
  cidr_block = "172.31.0.0/16"
  enable_classiclink = "false"
  enable_classiclink_dns_support = "false"
  enable_dns_hostnames = "true"
  enable_dns_support = "true"
  instance_tenancy = "default"
  tags {
    name = "default"
  }
}

output "vpc.id" {
  value = "${aws_vpc.default.id}"
}
